analizador sintactico/comandoParser.js
// Generated from comando.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import comandoListener from './comandoListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class comandoParser extends antlr4.Parser {

    static grammarFileName = "comando.g4";
    static literalNames = [ null, "'!'", "'/'", "'#'", "'&'", "'--'", "'='", 
                            "'-'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             "TEXTO", "PALABRA", "NUMERO", "LETRA" ];
    static ruleNames = [ "comando", "prefijoComando", "nombreComando", "argumento", 
                         "argumentoPosicional", "argumentoOpcional", "nombreArgumento", 
                         "valorArgumento", "texto", "palabra", "numero", 
                         "letra" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = comandoParser.ruleNames;
        this.literalNames = comandoParser.literalNames;
        this.symbolicNames = comandoParser.symbolicNames;
    }



	comando() {
	    let localctx = new ComandoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, comandoParser.RULE_comando);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 24;
	        this.prefijoComando();
	        this.state = 25;
	        this.nombreComando();
	        this.state = 29;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 1952) !== 0)) {
	            this.state = 26;
	            this.argumento();
	            this.state = 31;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	prefijoComando() {
	    let localctx = new PrefijoComandoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, comandoParser.RULE_prefijoComando);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 32;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 30) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	nombreComando() {
	    let localctx = new NombreComandoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, comandoParser.RULE_nombreComando);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 34;
	        this.palabra();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	argumento() {
	    let localctx = new ArgumentoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, comandoParser.RULE_argumento);
	    try {
	        this.state = 38;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 8:
	        case 9:
	        case 10:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 36;
	            this.argumentoPosicional();
	            break;
	        case 5:
	        case 7:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 37;
	            this.argumentoOpcional();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	argumentoPosicional() {
	    let localctx = new ArgumentoPosicionalContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, comandoParser.RULE_argumentoPosicional);
	    try {
	        this.state = 43;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 8:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 40;
	            this.texto();
	            break;
	        case 9:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 41;
	            this.palabra();
	            break;
	        case 10:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 42;
	            this.numero();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	argumentoOpcional() {
	    let localctx = new ArgumentoOpcionalContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, comandoParser.RULE_argumentoOpcional);
	    var _la = 0;
	    try {
	        this.state = 56;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 5:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 45;
	            this.match(comandoParser.T__4);
	            this.state = 46;
	            this.nombreArgumento();
	            this.state = 49;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===6) {
	                this.state = 47;
	                this.match(comandoParser.T__5);
	                this.state = 48;
	                this.valorArgumento();
	            }

	            break;
	        case 7:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 51;
	            this.match(comandoParser.T__6);
	            this.state = 52;
	            this.letra();
	            this.state = 54;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
	            if(la_===1) {
	                this.state = 53;
	                this.valorArgumento();

	            }
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	nombreArgumento() {
	    let localctx = new NombreArgumentoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, comandoParser.RULE_nombreArgumento);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 58;
	        this.palabra();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	valorArgumento() {
	    let localctx = new ValorArgumentoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, comandoParser.RULE_valorArgumento);
	    try {
	        this.state = 63;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 8:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 60;
	            this.texto();
	            break;
	        case 10:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 61;
	            this.numero();
	            break;
	        case 9:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 62;
	            this.palabra();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	texto() {
	    let localctx = new TextoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, comandoParser.RULE_texto);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 65;
	        this.match(comandoParser.TEXTO);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	palabra() {
	    let localctx = new PalabraContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, comandoParser.RULE_palabra);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 67;
	        this.match(comandoParser.PALABRA);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	numero() {
	    let localctx = new NumeroContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, comandoParser.RULE_numero);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 69;
	        this.match(comandoParser.NUMERO);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	letra() {
	    let localctx = new LetraContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, comandoParser.RULE_letra);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 71;
	        this.match(comandoParser.LETRA);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

comandoParser.EOF = antlr4.Token.EOF;
comandoParser.T__0 = 1;
comandoParser.T__1 = 2;
comandoParser.T__2 = 3;
comandoParser.T__3 = 4;
comandoParser.T__4 = 5;
comandoParser.T__5 = 6;
comandoParser.T__6 = 7;
comandoParser.TEXTO = 8;
comandoParser.PALABRA = 9;
comandoParser.NUMERO = 10;
comandoParser.LETRA = 11;

comandoParser.RULE_comando = 0;
comandoParser.RULE_prefijoComando = 1;
comandoParser.RULE_nombreComando = 2;
comandoParser.RULE_argumento = 3;
comandoParser.RULE_argumentoPosicional = 4;
comandoParser.RULE_argumentoOpcional = 5;
comandoParser.RULE_nombreArgumento = 6;
comandoParser.RULE_valorArgumento = 7;
comandoParser.RULE_texto = 8;
comandoParser.RULE_palabra = 9;
comandoParser.RULE_numero = 10;
comandoParser.RULE_letra = 11;

class ComandoContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = comandoParser.RULE_comando;
    }

	prefijoComando() {
	    return this.getTypedRuleContext(PrefijoComandoContext,0);
	};

	nombreComando() {
	    return this.getTypedRuleContext(NombreComandoContext,0);
	};

	argumento = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ArgumentoContext);
	    } else {
	        return this.getTypedRuleContext(ArgumentoContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof comandoListener ) {
	        listener.enterComando(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof comandoListener ) {
	        listener.exitComando(this);
		}
	}


}



class PrefijoComandoContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = comandoParser.RULE_prefijoComando;
    }


	enterRule(listener) {
	    if(listener instanceof comandoListener ) {
	        listener.enterPrefijoComando(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof comandoListener ) {
	        listener.exitPrefijoComando(this);
		}
	}


}



class NombreComandoContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = comandoParser.RULE_nombreComando;
    }

	palabra() {
	    return this.getTypedRuleContext(PalabraContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof comandoListener ) {
	        listener.enterNombreComando(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof comandoListener ) {
	        listener.exitNombreComando(this);
		}
	}


}



class ArgumentoContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = comandoParser.RULE_argumento;
    }

	argumentoPosicional() {
	    return this.getTypedRuleContext(ArgumentoPosicionalContext,0);
	};

	argumentoOpcional() {
	    return this.getTypedRuleContext(ArgumentoOpcionalContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof comandoListener ) {
	        listener.enterArgumento(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof comandoListener ) {
	        listener.exitArgumento(this);
		}
	}


}



class ArgumentoPosicionalContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = comandoParser.RULE_argumentoPosicional;
    }

	texto() {
	    return this.getTypedRuleContext(TextoContext,0);
	};

	palabra() {
	    return this.getTypedRuleContext(PalabraContext,0);
	};

	numero() {
	    return this.getTypedRuleContext(NumeroContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof comandoListener ) {
	        listener.enterArgumentoPosicional(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof comandoListener ) {
	        listener.exitArgumentoPosicional(this);
		}
	}


}



class ArgumentoOpcionalContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = comandoParser.RULE_argumentoOpcional;
    }

	nombreArgumento() {
	    return this.getTypedRuleContext(NombreArgumentoContext,0);
	};

	valorArgumento() {
	    return this.getTypedRuleContext(ValorArgumentoContext,0);
	};

	letra() {
	    return this.getTypedRuleContext(LetraContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof comandoListener ) {
	        listener.enterArgumentoOpcional(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof comandoListener ) {
	        listener.exitArgumentoOpcional(this);
		}
	}


}



class NombreArgumentoContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = comandoParser.RULE_nombreArgumento;
    }

	palabra() {
	    return this.getTypedRuleContext(PalabraContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof comandoListener ) {
	        listener.enterNombreArgumento(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof comandoListener ) {
	        listener.exitNombreArgumento(this);
		}
	}


}



class ValorArgumentoContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = comandoParser.RULE_valorArgumento;
    }

	texto() {
	    return this.getTypedRuleContext(TextoContext,0);
	};

	numero() {
	    return this.getTypedRuleContext(NumeroContext,0);
	};

	palabra() {
	    return this.getTypedRuleContext(PalabraContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof comandoListener ) {
	        listener.enterValorArgumento(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof comandoListener ) {
	        listener.exitValorArgumento(this);
		}
	}


}



class TextoContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = comandoParser.RULE_texto;
    }

	TEXTO() {
	    return this.getToken(comandoParser.TEXTO, 0);
	};

	enterRule(listener) {
	    if(listener instanceof comandoListener ) {
	        listener.enterTexto(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof comandoListener ) {
	        listener.exitTexto(this);
		}
	}


}



class PalabraContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = comandoParser.RULE_palabra;
    }

	PALABRA() {
	    return this.getToken(comandoParser.PALABRA, 0);
	};

	enterRule(listener) {
	    if(listener instanceof comandoListener ) {
	        listener.enterPalabra(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof comandoListener ) {
	        listener.exitPalabra(this);
		}
	}


}



class NumeroContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = comandoParser.RULE_numero;
    }

	NUMERO() {
	    return this.getToken(comandoParser.NUMERO, 0);
	};

	enterRule(listener) {
	    if(listener instanceof comandoListener ) {
	        listener.enterNumero(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof comandoListener ) {
	        listener.exitNumero(this);
		}
	}


}



class LetraContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = comandoParser.RULE_letra;
    }

	LETRA() {
	    return this.getToken(comandoParser.LETRA, 0);
	};

	enterRule(listener) {
	    if(listener instanceof comandoListener ) {
	        listener.enterLetra(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof comandoListener ) {
	        listener.exitLetra(this);
		}
	}


}




comandoParser.ComandoContext = ComandoContext; 
comandoParser.PrefijoComandoContext = PrefijoComandoContext; 
comandoParser.NombreComandoContext = NombreComandoContext; 
comandoParser.ArgumentoContext = ArgumentoContext; 
comandoParser.ArgumentoPosicionalContext = ArgumentoPosicionalContext; 
comandoParser.ArgumentoOpcionalContext = ArgumentoOpcionalContext; 
comandoParser.NombreArgumentoContext = NombreArgumentoContext; 
comandoParser.ValorArgumentoContext = ValorArgumentoContext; 
comandoParser.TextoContext = TextoContext; 
comandoParser.PalabraContext = PalabraContext; 
comandoParser.NumeroContext = NumeroContext; 
comandoParser.LetraContext = LetraContext; 
